update roi API
