# v1.0/backend/src/routers/roi.route.js
@@ -11,12 +11,20 @@ router.post('/createRoi/:examId', async (req, res) => {
         if(!exams) {
             res.status(404).send({"message":'TestId Does not exist'})
         }
+        const roiExist = await ROI.findOne({examId:req.params.examId}).lean() 
+        if(roiExist) res.status(400).send( {"message":`ROI already exist for ${req.params.examId}`}) 
         let createObject = req.body
         createObject.roiId = uuidv1()
+        createObject.examId = req.params.examId
 
         let roi = await ROI.create(createObject);
+        let roiResponse = {
+            roiId: roi.roiId,
+            examId: roi.examId,
+            createdAt: roi.createdAt
+        }
         
-        res.status(201).send(roi)  
+        res.status(201).send(roiResponse)  
     } catch (e){   
         res.status(400).send(e)
     }
@@ -54,8 +62,8 @@ router.patch('/updateRoi/:roiId', async (req, res) => {
 router.delete('/deleteRoi/:roiId', async (req, res) => {
     try {
         let roi = await ROI.findOneAndRemove({roiId: req.params.roiId})
-        if(!roi) res.status(404).send({"message": "ROI ID has been deleted."})
-        res.status(200).send({"message": "ROI has been deleted."})
+        if(!roi) res.status(404).send({"message": "ROI ID has been already deleted."})
+        res.status(200).send({"message": "ROI has been deleted successfully."})
     } catch (e){   
         res.status(400).send(e)
     }
@@ -64,7 +72,7 @@ router.delete('/deleteRoi/:roiId', async (req, res) => {
 router.get('/roi?', async (req, res) => {
     try {
         let lookup = {}
-        if(req.query)  lookup.roiId =  req.query.roiId
+        if(req.query.examId)  lookup.examId =  req.query.examId
         let roi = await ROI.find(lookup,{_id: 0,__v: 0 }).lean()
         for(let data of roi){
         delete data.createdAt
